--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,10 +1,10 @@
 name: "🚀 CI/CD Pipeline"
 
 on:
-  push:
-    branches: [main, develop]
-  pull_request:
-    branches: [main]
+  # push:
+  #   branches: [main, develop]
+  # pull_request:
+  #   branches: [main]
   workflow_dispatch:
 
 env:
